# Music-Player-Sonarix

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CoverArt.tsx  KeyboardCheatsheet.tsx  Sidebar.tsx  SongContextMenu.tsx  StarRating.tsx
src/components/Album/: AlbumView.tsx
src/components/Dashboard/: Dashboard.tsx
src/components/Equalizer/: EqualizerView.tsx
src/components/Lyrics/: LyricsPanel.tsx
src/components/Notification/: ToastSystem.tsx  useTrackNotification.ts
src/components/Onboarding/: Onboarding.tsx
src/components/Player/: MiniPlayer.tsx  PlayerBar.tsx  PlayerBarV2.tsx  SleepTimer.tsx  useKeyboardShortcuts.ts  useMiniPlayer.ts
src/components/Playlist/: PlaylistsView.tsx  QueueView.tsx
src/components/Settings/: SettingsPanel.tsx
src/components/Smart/: SmartPlaylistView.tsx
src/components/Visualizer/: BarVisualizer.tsx
src/components/Waveform/: WaveformSeekbar.tsx
src/hooks/: useSettingsInit.ts
src/lib/: audioEngine.ts  db.ts  i18n.ts  lrcParser.ts  playlistIO.ts  scanner.ts  shuffleEngine.ts  smartShuffle.ts  useFolderWatch.ts
src/store/: index.ts
src/tests/: lrcParser.test.ts  playlistIO.test.ts  setup.ts  smartPlaylist.test.ts  smartShuffle.test.ts
src/utils/: ErrorBoundary.tsx  logger.ts  performance.ts
